--- a/backend/web/index.html
+++ b/backend/web/index.html
@@ -2155,7 +2155,7 @@
                               class="fixed top-0 right-0 w-full md:w-2/3 lg:w-1/2 h-full bg-white shadow-2xl transform translate-x-full transition-transform duration-300 z-50 overflow-y-auto">
 
                       <div class="flex justify-between items-center p-4 border-b">
-                        <h2 class="text-lg font-semibold">治具詳情</h2>
+                        <h2 class="text-lg font-semibold">治具資訊</h2>
                         <button onclick="closeFixtureDetail()" class="text-gray-500 hover:text-black">
                           ✕
                         </button>
@@ -2173,7 +2173,7 @@
                          class="fixed right-0 top-0 h-full w-[480px] bg-white shadow-xl transform translate-x-full transition-all duration-300 z-50">
 
                       <div class="flex justify-between items-center p-4 border-b">
-                        <h2 class="text-lg font-semibold">機種詳情</h2>
+                        <h2 class="text-lg font-semibold">機種資訊</h2>
                         <button onclick="closeModelDetail()" class="text-gray-500 hover:text-black">✕</button>
                       </div>
 
