update-life-cycle-datecode-done-20260221

--- a/backend/web/index.html
+++ b/backend/web/index.html
@@ -142,6 +142,14 @@
                         <div class="mt-3 space-y-2" id="todayOutList"></div>
                       </div>
 
+                      <div class="home-card card p-5">
+                          <div class="flex items-center justify-between">
+                            <h3 class="font-semibold">即將更換治具</h3>
+                            <span class="pill border-orange-300 text-orange-700 bg-orange-50">壽命</span>
+                          </div>
+                          <div class="mt-3 space-y-2" id="upcomingList"></div>
+                        </div>  
+
                     </div>
 
 
